--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <input type="text" placeholder="门岗-本部2号门" class="location">
         <span class="time"></span>
 
-        <img src="4.PNG">
+        <img src="4.png">
     </div>
 
     <script>
