--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <body>
         <div class="container">
-        <input type="text" placeholder="张家冉" class="name">
+        <input type="text" placeholder="张晓冉" class="name">
         <input type="text" placeholder="门岗-本部2号门" class="location">
         <span class="time"></span>
 
