--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         
         .container .name {
             font-size: 20px;
-            font-weight: 600;
+            font-weight: 620;
             position: fixed;
             color: white;
-            left: 82px;
+            left: 70px;
             top: 25px;
             border: none;
             background-color: transparent;
@@ -89,7 +89,7 @@
     <body>
         <div class="container">
         <input type="text" placeholder="张晓冉" class="name">
-        <input type="text" placeholder="门岗-本部2号门" class="location">
+        <input type="text" placeholder="门岗-本部2号门（出门码）" class="location">
         <span class="time"></span>
 
         <img src="4.png">
