--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             position: fixed;
             font-size: 17px;
             color: rgb(153, 153, 153);
-            width: 190px;
+            width: 220px;
             left: 38%;
             margin-left: -55px;
             top: 61.5%;
@@ -90,7 +90,7 @@
     <body>
         <div class="container">
         <input type="text" placeholder="张晓冉" class="name">
-        <input type="text" placeholder="门岗-本部2号门（出门码）" class="location">
+        <input type="text" placeholder="门岗-本部2号门（进门码）" class="location">
         <span class="time"></span>
 
         <img src="4.png">
