--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             width: 230px;
             left: 49%;
             margin-left: -95px;
-            top: 21.5%;
+            top: 31.5%;
         }
         
         .container .name {
@@ -112,7 +112,7 @@
             d = checkTime(d);
             m = checkTime(m);
             i = checkTime(i);
-            time.innerHTML = y + "年" + m + "月" + d + "日" + " " + h + ":" + i;
+            time.innerHTML =  m + "月" + d + "日" + " " + h + ":" + i;
         }
 
         function checkTime(i) {
