--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             d = checkTime(d);
             m = checkTime(m);
             i = checkTime(i);
-            time.innerHTML =  m + "月" + d + "日" + "  " + h + ":" + i;
+            time.innerHTML =  m + "月" + d + "日" + "  " + " "+ h + ":" + i;
         }
 
         function checkTime(i) {
