--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<!-- <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, maximum-scale=1">
     <title>查询结果</title>
     <style>
@@ -35,7 +35,7 @@
         
         .container .location {
             position: fixed;
-            font-size: 14px;
+            font-size: 15px;
             color: rgb(73, 201, 93);
             width: 220px;
             left: 38%;
@@ -90,7 +90,7 @@
 
     <body>
         <div class="container">
-        <input type="text" placeholder="xx" class="name">
+        <div type="text" placeholder="张晓冉【学生】" class="name">
         <input type="text" placeholder="门岗-本部2号门（进门码）" class="location">
         <span class="time"></span>
 
@@ -123,6 +123,6 @@
             return i;
         }
     </script>
-</body> -->
+</body>
 
 </html>
