--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             d = checkTime(d);
             m = checkTime(m);
             i = checkTime(i);
-            time.innerHTML = y + "年" + m + "月" + d + "日" + " " + h + ":" + i;
+            time.innerHTML =  m + "月" + d + "日" + "  " + " "+ h + ":" + i;
         }
 
         function checkTime(i) {
