--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .container .name {
             font-size: 20px;
             font-weight: 600;
-            width: 131px;
+            width: 140px;
             position: fixed;
             color: white;
             left: 85px;
@@ -90,7 +90,7 @@
 
     <body>
         <div class="container">
-        <input type="text" disabled="disabled" placeholder="张晓扬【学生】" class="name">
+        <label class="name">张晓扬【学生】 </label>
         <input type="text" placeholder="门岗-本部2号门（进门码）" class="location">
         <span class="time"></span>
 
