--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, maximum-scale=1">
     <title>查询结果</title>
     <style>
+        body{
+             width:100%;
+             background-image: url(12.png);
+             background-size: cover;
+             background-repeat: no-repeat;
+
+        }
+              
         .container img {
             width: 100%;
-            height: 100vh;
+            height: 100%;
         }
         
         .container .time {
@@ -89,12 +97,12 @@
 </head>
 
     <body>
+        <!-- <img src="6.png" > -->
         <div class="container">
         <label class="name">张晓扬【学生】 </label>
         <input type="text" placeholder="门岗-本部2号门（进门码）" class="location">
         <span class="time"></span>
 
-        <img src="5.png">
     </div>
 
     <script>
