--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <span class="time"></span>
 
     </div>
-
+	</body>
     <script>
         var time = document.querySelector('.time');
 
@@ -130,7 +130,10 @@
             }
             return i;
         }
+        document.body.addEventListener('touchmove', function (e) {
+		  e.preventDefault();
+		}, {passive: false});
     </script>
-</body>
+
 
 </html>
