--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>查询结果</title>
     <style>
-        body {
-            background: green;
-            padding: 100%;
-            height: 100%;
+        body{
+             width:100%;
+             background-image: url(5.png);
+             background-size: cover;
+             background-repeat: no-repeat;
+
         }
     </style>
 </head>
