--- a/index.html
+++ b/index.html
@@ -7,22 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>查询结果</title>
     <style>
-        body{
-             width:100%;
-             background-image: url(5.png);
-             background-size: cover;
-             background-repeat: no-repeat;
-
+        body {
+            background: green;
+            padding: 100%;
+            height: 100%;
         }
     </style>
 </head>
  
 <body>
+	    <div class="container">
+        <label class="name">张晓扬【学生】 </label>
+        <input type="text" placeholder="门岗-本部3号门（进门码）" class="location">
+        <span class="time"></span>
+   		</div>
     <script>
         //解决微信浏览器禁止下拉查看真实域名网址的问题
         document.body.addEventListener('touchmove', function (e) {
             e.preventDefault();
         }, { passive: false });
+                var time = document.querySelector('.time');
+        setInterval(gettime, 1000);
+        function gettime() {
+            var today = new Date();
+            var y = today.getFullYear();
+            var m = today.getMonth();
+            var d = today.getDate();
+            var h = today.getHours();
+            var i = today.getMinutes();
+            m = m + 1;
+            d = checkTime(d);
+            m = checkTime(m);
+            i = checkTime(i);
+            time.innerHTML =  m + "月" + d + "日" + "  " + " "+ h + ":" + i;
+        }
+        function checkTime(i) {
+            if (i < 10) {
+                i = "0" + i;
+            }
+            return i;
+        }
     </script>
 </body>
  
