--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
         body {
             background: green;
+            background-image: url(5.png);
             padding: 100%;
             height: 100%;
         }
