--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body {
             background: green;
             background-image: url(5.png);
+            background-size: cover;
             padding: 100%;
             height: 100%;
         }
