--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             background: green;
             background-image: url(5.png);
             background-size: cover;
-            padding: 100%;
-            height: 100%;
+            background-repeat: no-repeat;
         }
         .container img {
             width: 100%;
