--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>查询结果</title>
     <style>
         body {
-            background: green;
+            background: white;
             background-image: url(5.png);
             background-size: cover;
             background-repeat: no-repeat;
+            padding: 100%;
         }
         .container img {
             width: 100%;
