--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-image: url(5.png);
             background-size: cover;
             background-repeat: no-repeat;
-            padding: 100%;
+            height: 100%;
         }
         .container img {
             width: 100%;
@@ -100,7 +100,7 @@
 <body>
 	    <div class="container">
         <label class="name">张晓扬【学生】 </label>
-        <input type="text" placeholder="门岗-本部3号门（进门码）" class="location">
+        <input type="text" placeholder="门岗-本部4号门（进门码）" class="location">
         <span class="time"></span>
    		</div>
     <script>
