--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <style>
         body {
             background: white;
-            background-image: url(5.png);
             background-size: cover;
             background-repeat: no-repeat;
+            padding: 100%;
             height: 100%;
         }
         .container img {
@@ -99,8 +99,9 @@
  
 <body>
 	    <div class="container">
+    	<img src="5.png" style="width: 100%;" />
         <label class="name">张晓扬【学生】 </label>
-        <input type="text" placeholder="门岗-本部4号门（进门码）" class="location">
+        <input type="text" placeholder="门岗-本部3号门（进门码）" class="location">
         <span class="time"></span>
    		</div>
     <script>
