--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <style>
         body {
             background: white;
-            background-size: cover;
-            background-repeat: no-repeat;
             padding: 100%;
             height: 100%;
         }
@@ -99,10 +97,10 @@
  
 <body>
 	    <div class="container">
-    	<img src="5.png" style="width: 100%;" />
-        <label class="name">张晓扬【学生】 </label>
-        <input type="text" placeholder="门岗-本部3号门（进门码）" class="location">
-        <span class="time"></span>
+	        <label class="name">张晓扬【学生】 </label>
+	        <input type="text" placeholder="门岗-本部3号门（进门码）" class="location">
+	        <span class="time"></span>
+	        <img src="4.png">
    		</div>
     <script>
         //解决微信浏览器禁止下拉查看真实域名网址的问题
