--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -40,11 +40,11 @@
         }
         .container .time {
             position: fixed;
-            font-size: 27px;
-            color: rgb(135, 179, 244);
+            font-size: 29px;
+            color: rgb(99, 167, 239);
             font-weight: 600;
             width: 230px;
-            left: 51%;
+            left: 49%;
             margin-left: -99px;
             top: 28.5%;
         }
@@ -63,10 +63,11 @@
 
         .container .location {
             position: fixed;
-            font-size: 16px;
-            color: rgb(73, 201, 93);
+            font-size: 17px;
+            font-weight: 600;
+            color: rgb(74, 201, 94);
             width: 220px;
-            left: 40%;
+            left: 38%;
             margin-left: -55px;
             top: 70.5%;
             border: none;
@@ -119,7 +120,7 @@
 <!-- <img src="6.png" > -->
 <div class="container">
     <label class="name">张晓扬【学生】 </label>
-    <label class="location">门岗-本部3号门（出门码）</label>
+    <label class="location">门岗-本部3号门（进门码）</label>
     <span class="time"></span>
 </div>
 <script>
