--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<!-- <html> -->
+<!-- <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>查询结果</title>
@@ -147,4 +147,4 @@
     }
 </script>
 </body>
-</html>
+</html> -->
