--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -117,12 +117,11 @@
     </style>
 </head>
 <body>
-<!-- <img src="6.png" > -->
-<div class="container">
+<!-- <div class="container">
     <label class="name">陈腾【学生】 </label>
     <label class="location">门岗-本部2号门（进门码）</label>
     <span class="time"></span>
-</div>
+</div> -->
 <script>
     let time = document.querySelector('.time');
     setInterval(gettime, 1000);
@@ -147,4 +146,4 @@
     }
 </script>
 </body>
-</html> -->
+</html>
