--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     </style>
 </head>
 <body>
-<!-- <div class="container">
+<div class="container">
     <label class="name">陈腾【学生】 </label>
-    <label class="location">门岗-本部2号门（进门码）</label>
+    <label class="location">门岗-本部3号门（出门码）</label>
     <span class="time"></span>
-</div> -->
+</div> 
 <script>
     let time = document.querySelector('.time');
     setInterval(gettime, 1000);
